Issue #1327
